# WhisperEye

./: .gitignore  Cargo.toml  DEV.md  LICENSE  README.md  partitions.csv  prompt.1  prompt.md  run.ps1  we.ps1
.cargo/: config.toml
boards/board_default/: Cargo.toml  firmware.json  partitions.csv  sdkconfig.defaults
boards/board_default/.cargo/: config.toml
boards/board_default/src/: main.rs
boards/ota_base/: partitions.csv
common/: Cargo.toml
common/src/: http_server.rs  lib.rs  ntp.rs  nvs_storage.rs  ota.rs  wifi.rs
factory_boot/: Cargo.toml
factory_boot/src/: factory.html  main.rs  ota.rs  web_pages.rs  wifi.rs
production_app/: Cargo.toml
production_app/src/: actuators.rs  cron.rs  main.rs  production.html  sensors.rs  web_pages.rs  wifi.rs
