[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Sctfic <contact@sctfic.com>"]

[dependencies]
# Abstractions matérielles et services de l'écosystème ESP-IDF
esp-idf-sys = { version = "0.35", features = ["binstart"] }
esp-idf-hal = "0.44"
esp-idf-svc = "0.49"

# Abstractions génériques d'embarqué
embedded-hal = "1.0.0"

# TOTP pour l'authentification sécurisée sur le serveur HTTP
totp-rs = { version = "5.6.0", features = ["qr"] }

# Logging et utilitaires
log = "0.4.22"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
